module(
    name = "bazel_skylib",
    # If you change this, please also update @bazel_skylib_gazelle_plugin//:MODULE.bazel
    version = "1.3.0",
    compatibility_level = 1,
)

register_toolchains(
    "//toolchains/unittest:cmd_toolchain",
    "//toolchains/unittest:bash_toolchain",
)

bazel_dep(name = "platforms", version = "0.0.4")

### INTERNAL ONLY - lines after this are not included in the release packaging.

# Build-only / test-only dependencies
bazel_dep(name = "stardoc", version = "0.5.3", dev_dependency = True, repo_name = "io_bazel_stardoc")
bazel_dep(name = "rules_pkg", version = "0.5.1", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.0.2", dev_dependency = True)
