module(
    name = "bazel_skylib",
    # Keep in sync with version.bzl and @bazel_skylib_gazelle_plugin//:MODULE.bazel
    version = "1.5.0",
    compatibility_level = 1,
)

register_toolchains(
    "//toolchains/unittest:cmd_toolchain",
    "//toolchains/unittest:bash_toolchain",
)

bazel_dep(name = "platforms", version = "0.0.4")

### INTERNAL ONLY - lines after this are not included in the release packaging.

# Build-only / test-only dependencies
bazel_dep(name = "stardoc", version = "0.5.6", dev_dependency = True, repo_name = "io_bazel_stardoc")
bazel_dep(name = "rules_pkg", version = "0.9.1", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.0.2", dev_dependency = True)

# Needed for bazelci and for building distribution tarballs.
# If using an unreleased version of bazel_skylib via git_override, apply
# MODULE.bazel-remove-override.patch to remove the following lines:
bazel_dep(name = "bazel_skylib_gazelle_plugin", dev_dependency = True)
local_path_override(
    module_name = "bazel_skylib_gazelle_plugin",
    path = "gazelle",
)
