module(
    name = "bazel_skylib_gazelle_plugin",
    compatibility_level = 1,
    # If you change this, please also update @bazel_gazelle//:MODULE.bazel
    version = "1.3.0",
)

bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "gazelle", repo_name = "bazel_gazelle", version = "0.28.0")
bazel_dep(name = "rules_go", repo_name = "io_bazel_rules_go", version = "0.35.0")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")

go_sdk.download(
    name = "go_sdk",
    version = "1.18",
)

use_repo(go_sdk, "go_sdk")

register_toolchains("@go_sdk//:all")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")

go_deps.module(
    path = "github.com/bazelbuild/buildtools",
    sum = "h1:fmdo+fvvWlhldUcqkhAMpKndSxMN3vH5l7yow5cEaiQ=",
    version = "v0.0.0-20220531122519-a43aed7014c8",
)

use_repo(go_deps, "com_github_bazelbuild_buildtools")
