module(
    name = "bazel_skylib_gazelle_plugin",
    # Keep in sync with @bazel_skylib//:MODULE.bazel and @bazel_skylib//:version.bzl
    version = "1.6.0",
    compatibility_level = 1,
)

# Keep in sync with @bazel_skylib//:MODULE.bazel and @bazel_skylib//:version.bzl
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "gazelle", version = "0.29.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_go", version = "0.41.0", repo_name = "io_bazel_rules_go")

# `rules_go` will register a toolchain for us if the user doesn't do so

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.module(
    path = "github.com/bazelbuild/buildtools",
    sum = "h1:fmdo+fvvWlhldUcqkhAMpKndSxMN3vH5l7yow5cEaiQ=",
    version = "v0.0.0-20220531122519-a43aed7014c8",
)
use_repo(go_deps, "com_github_bazelbuild_buildtools")
